# SWAT-Copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCUMENTATION_SEARCH_TOOL.md  Makefile  PROJECT_SUMMARY.md  QUICK_SETUP_DOCS.md  README.md  README_MCP.md  SETUP_COMPLETE.md  WHATS_NEW.md  docker-compose.yml  environment.yml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
docs/: DEVELOPMENT.md  DOCUMENTATION_SETUP.md  GETTING_STARTED.md  VERIFY_MCP_SETUP.md  architecture.md
docs/swat_documentation/vector_index/20d43710-ea09-49d0-9a2e-884a819da45c/: index_metadata.pickle
examples/: basic_usage.py
notebooks/: tests.ipynb
notebooks/exploratory/: tests.ipynb
scripts/: setup_documentation.py
src/swat_copilot/: __init__.py  __main__.py  cli.py
src/swat_copilot/api/: __init__.py  app.py  main.py
src/swat_copilot/api/routers/: __init__.py  health.py  summary.py
src/swat_copilot/cli/: __init__.py  app.py
src/swat_copilot/config/: __init__.py  settings.py
src/swat_copilot/core/: __init__.py  projects.py
src/swat_copilot/data_access/: __init__.py  readers.py  schemas.py
src/swat_copilot/integrations/: __init__.py
src/swat_copilot/integrations/mcp/: __init__.py  __main__.py  server.py  server_stub.py
src/swat_copilot/io/: readers.py  schemas.py  swat_project.py
src/swat_copilot/llm/: __init__.py  doc_indexer.py  prompts.py  rag.py
src/swat_copilot/mcp/: server_stub.py
src/swat_copilot/services/: __init__.py  analysis.py  project_manager.py  summary.py
src/swat_copilot/visualization/: __init__.py  plots.py
src/swat_copilot/viz/: plots.py
tests/: test_smoke.py
tests/unit/: test_version.py
