[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swat-copilot"
version = "0.0.1"
requires-python = ">=3.11"
description = "Copilot to explore, query, and visualize SWAT projects with LLM help."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SWAT-Copilot Contributors"}
]

dependencies = [
    # Core dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # MCP Protocol
    "mcp>=1.0.0",

    # API Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # LLM Integration (optional)
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",

    # Code quality
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

geospatial = [
    # Geospatial libraries (for future enhancement)
    "geopandas>=0.13.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
]

all = [
    "swat-copilot[dev,geospatial]",
]

[project.scripts]
swat-copilot = "swat_copilot.cli.app:app"
swat-mcp = "swat_copilot.integrations.mcp.server:main"

[tool.ruff]
line-length = 100
extend-select = ["I"]
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
